--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -14,6 +14,11 @@ scrape_configs:
     static_configs:
       - targets: [ 'grafana:3000' ]
 
+  # traefik
+  - job_name: traefik
+    static_configs:
+      - targets: [ 'traefik:8080' ]
+
   # monitor cable modem
   - job_name: motorola-mb8600
     scrape_interval: 1m
