--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
+      - --metrics=true
+      - --metrics.prometheus=true
     networks:
       - pi-cluster
 
