move prometheus data mount to external drive
keep getting corrupted mount after ~2 weeks

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: prom/prometheus:v2.25.0
     restart: always
     volumes:
-      - ./prometheus-data:/prometheus
+      - /mnt/hdd/prometheus-data:/prometheus
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - pi-cluster
