--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: prom/prometheus:v2.28.1
     restart: unless-stopped
     volumes:
-      - /mnt/hdd/prometheus-data:/prometheus
+      - prometheus-data:/prometheus
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - pi-cluster
@@ -14,6 +14,14 @@ services:
       - traefik.enable=true
       - traefik.http.routers.prometheus.rule=Host(`prometheus.lab.omglolwtfbbq.com`)
       - traefik.http.routers.prometheus.entrypoints=web
+
+volumes:
+  prometheus-data:
+    driver: local
+    driver_opts:
+      type: nfs
+      o: addr=192.168.42.11
+      device: ":/apps/prometheus"
 
 networks:
   pi-cluster:
