use nfs volumes for persistent data
nfs should allow cluster access

--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -20,7 +20,7 @@ volumes:
     driver_opts:
       type: nfs
       o: addr=192.168.42.11
-      device: ":/apps/grafana"
+      device: ":/mnt/hdd/share/apps/grafana"
 
 networks:
   pi-cluster:
