--- a/.template/docker-compose.yml
+++ b/.template/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   foo-service:
     image: foo
-    restart: always
+    restart: unless-stopped
     labels:
       - traefik.enable=true
       - traefik.http.routers.whoami.rule=Host(`foo.lab.omglolwtfbbq.com`)
