--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   grafana:
     image: grafana/grafana:7.5.9
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./grafana-data:/var/lib/grafana
     networks:
