--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   prometheus:
     image: prom/prometheus:v2.28.1
-    restart: always
+    restart: unless-stopped
     volumes:
       - /mnt/hdd/prometheus-data:/prometheus
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
