--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   traefik:
     image: traefik:v2.4.9
-    restart: always
+    restart: unless-stopped
     ports:
       - 80:80
       - 8080:8080
