--- a/unifi-poller/docker-compose.yml
+++ b/unifi-poller/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   unifi-poller:
     image: golift/unifi-poller:latest
-    restart: always
+    restart: unless-stopped
     environment:
       - UP_UNIFI_DEFAULT_URL=${UNIFI_ADDRESS}
       - UP_UNIFI_DEFAULT_USER=${UNIFI_USERNAME}
