--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -26,11 +26,11 @@ volumes:
     driver: local
     driver_opts:
       type: nfs
-      o: addr=192.168.42.11
+      o: addr=192.168.42.11,nolock,soft,rw
       device: ":/mnt/hdd/share/apps/pihole/pihole"
   pihole-dnsmasq:
     driver: local
     driver_opts:
       type: nfs
-      o: addr=192.168.42.11
+      o: addr=192.168.42.11,nolock,soft,rw
       device: ":/mnt/hdd/share/apps/pihole/dnsmasq"
