--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   pihole:
-    image: pihole/pihole:latest
+    image: pihole/pihole:v5.8.1
     restart: unless-stopped
     environment:
       - TZ=America/New_York
