--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -17,5 +17,5 @@ volumes:
     driver: local
     driver_opts:
       type: nfs
-      o: addr=192.168.42.11
+      o: addr=192.168.42.11,nolock,soft,rw
       device: ":/mnt/hdd/share/apps/grafana"
