--- a/motorola-mb8600/docker-compose.yml
+++ b/motorola-mb8600/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
 
   mb8600-exporter:
+    image: local/motorola-mb8600-prometheus-exporter
     build: ./motorola-mb8600-prometheus-exporter
     restart: unless-stopped
     environment:
