--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -39,7 +39,7 @@ scrape_configs:
   # node_exporter
   - job_name: node
     static_configs:
-      - targets: [ '172.17.0.1:9100' ]
+      - targets: [ 'node_exporter:9100' ]
 
   # cadvisor
   - job_name: cadvisor
