--- a/motorola-mb8600/docker-compose.yml
+++ b/motorola-mb8600/docker-compose.yml
@@ -13,3 +13,17 @@ services:
       - MODEM_IGNORE_SSL=true
     labels:
       - traefik.enable=false
+
+  mb8600-restart:
+    image: local/motorola-mb8600-reboot
+    build: ./motorola-mb8600-reboot
+    command:
+      - --url ${MODEM_ADDRESS}
+      - --username ${MODEM_USERNAME}
+      - --password ${MODEM_PASSWORD}
+      - --ignore-ssl
+    deploy:
+      replicas: 0 # none by default; created when cron hits
+      labels:
+        - swarm.cronjob.enable=true
+        - swarm.cronjob.schedule=0 5 * * mon
