--- a/cadvisor/docker-compose.yml
+++ b/cadvisor/docker-compose.yml
@@ -5,14 +5,11 @@ services:
   cadvisor:
     # image: gcr.io/cadvisor/cadvisor:latest
     # official image doesn't support arm
-    image: budry/cadvisor-arm:latest
-    restart: unless-stopped
+    image: budry/cadvisor-arm:0.30.2
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
-    labels:
-      - traefik.enable=false
     deploy:
       mode: global
