--- a/unifi-poller/docker-compose.yml
+++ b/unifi-poller/docker-compose.yml
@@ -3,13 +3,10 @@ version: '3.8'
 services:
 
   unifi-poller:
-    image: golift/unifi-poller:latest
-    restart: unless-stopped
+    image: golift/unifi-poller:2.1.3
     environment:
       - UP_UNIFI_DEFAULT_URL=${UNIFI_ADDRESS}
       - UP_UNIFI_DEFAULT_USER=${UNIFI_USERNAME}
       - UP_UNIFI_DEFAULT_PASS=${UNIFI_PASSWORD}
       - UP_INFLUXDB_DISABLE=true
       - UP_UNIFI_DEFAULT_SAVE_DPI=true
-    labels:
-      - traefik.enable=false
