disable restart for modem reboot job
Without this, docker swarm was 'detecting task failure' and trying over and over.

--- a/motorola-mb8600/docker-compose.yml
+++ b/motorola-mb8600/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - ${MODEM_PASSWORD}
       - --ignore-ssl
     deploy:
+      restart_policy:
+        condition: none
       replicas: 0 # none by default; created when cron hits
       labels:
         - swarm.cronjob.enable=true
