--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -13,7 +13,12 @@ services:
       - --log.level=DEBUG
       - --api.insecure=true
       - --providers.docker=true
+      - --providers.docker.swarmMode=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
       - --metrics=true
       - --metrics.prometheus=true
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
