--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -4,7 +4,8 @@ services:
 
   whoami:
     image: traefik/whoami:v1.6.1
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.whoami.rule=Host(`whoami.lab.omglolwtfbbq.com`)
-      - traefik.http.routers.whoami.entrypoints=web
+    deploy:
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.whoami.rule=Host(`whoami.lab.omglolwtfbbq.com`)
+        - traefik.http.routers.whoami.entrypoints=web
