--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         - traefik.enable=true
         - traefik.http.routers.grafana.rule=Host(`grafana.lab.omglolwtfbbq.com`)
         - traefik.http.routers.grafana.entrypoints=web
+        - traefik.http.services.grafana.loadbalancer.server.port=3000
   
 volumes:
   grafana-data:
