--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -7,5 +7,6 @@ services:
     deploy:
       labels:
         - traefik.enable=true
+        - traefik.http.services.whoami.loadbalancer.server.port=80
         - traefik.http.routers.whoami.rule=Host(`whoami.lab.omglolwtfbbq.com`)
         - traefik.http.routers.whoami.entrypoints=web
