--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,20 +5,20 @@ global:
 # scrape jobs use docker-compose service names as hostname
 scrape_configs:
 
-  # monitor prometheus itself
-  - job_name: prometheus
-    static_configs:
-      - targets: [ 'prometheus:9090' ]
+  # # monitor prometheus itself
+  # - job_name: prometheus
+  #   static_configs:
+  #     - targets: [ 'prometheus:9090' ]
 
-  # monitor grafana
-  - job_name: grafana
-    static_configs:
-      - targets: [ 'grafana:3000' ]
+  # # monitor grafana
+  # - job_name: grafana
+  #   static_configs:
+  #     - targets: [ 'grafana:3000' ]
 
-  # traefik
-  - job_name: traefik
-    static_configs:
-      - targets: [ 'traefik:8080' ]
+  # # traefik
+  # - job_name: traefik
+  #   static_configs:
+  #     - targets: [ 'traefik:8080' ]
 
   # monitor cable modem
   - job_name: motorola-mb8600
@@ -27,27 +27,27 @@ scrape_configs:
     static_configs:
       - targets: [ 'mb8600-exporter:3000' ]
 
-  # unifi controller
-  - job_name: unifi-controller
-    static_configs:
-      - targets: [ 'unifi-poller:9130' ]
+  # # unifi controller
+  # - job_name: unifi-controller
+  #   static_configs:
+  #     - targets: [ 'unifi-poller:9130' ]
 
-  # node_exporter
-  - job_name: node
-    dns_sd_configs:
-      - names:
-          - 'tasks.node_exporter'
-        type: 'A'
-        port: 9100
+  # # node_exporter
+  # - job_name: node
+  #   dns_sd_configs:
+  #     - names:
+  #         - 'tasks.node_exporter'
+  #       type: 'A'
+  #       port: 9100
 
-  # cadvisor
-  - job_name: cadvisor
-    scrape_interval: 5s
-    dns_sd_configs:
-      - names:
-          - 'tasks.cadvisor'
-        type: 'A'
-        port: 8080
+  # # cadvisor
+  # - job_name: cadvisor
+  #   scrape_interval: 5s
+  #   dns_sd_configs:
+  #     - names:
+  #         - 'tasks.cadvisor'
+  #       type: 'A'
+  #       port: 8080
 
   # swarm nodes
   - job_name: docker
@@ -70,6 +70,10 @@ scrape_configs:
       - source_labels: [ __meta_dockerswarm_task_desired_state ]
         regex: running
         action: keep
+      # exclude the mb8600 exporter since it takes much longer to scrape
+      - source_labels: [ __meta_dockerswarm_service_name ]
+        regex: mb8600-exporter
+        action: drop
       # capture the service itself as the "job" (override this single 'tasks' job)
       - source_labels: [ __meta_dockerswarm_service_name ]
         target_label: job
