--- a/cadvisor/docker-compose.yml
+++ b/cadvisor/docker-compose.yml
@@ -13,3 +13,6 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     deploy:
       mode: global
+      labels:
+        - prometheus.swarm.enable=true
+        - prometheus.swarm.port=8080
