--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         constraints:
           - node.role == manager
       labels:
+        - prometheus.swarm.enable=true
+        - prometheus.swarm.port=3000
         - traefik.enable=true
         - traefik.http.routers.grafana.rule=Host(`grafana.lab.omglolwtfbbq.com`)
         - traefik.http.routers.grafana.entrypoints=web
