--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,19 +4,8 @@ global:
 
 scrape_configs:
 
-  # monitor cable modem
-  # configured separately to override interval/timeout
-  - job_name: motorola-mb8600
-    scrape_interval: 1m
-    scrape_timeout: 30s
-    dns_sd_configs:
-      - names:
-          - tasks.mb8600-exporter
-        type: A
-        port: 3000
-
   # swarm nodes
-  - job_name: docker
+  - job_name: swarm-nodes
     dockerswarm_sd_configs:
       - host: tcp://172.17.0.1:2375
         role: nodes
@@ -26,9 +15,14 @@ scrape_configs:
           - __meta_dockerswarm_node_address
         target_label: __address__
         replacement: $1:9323
+      # capture the hostname of the running node
+      - source_labels:
+          - __meta_dockerswarm_node_hostname
+        target_label: node
+        replacement: $1
 
   # swarm tasks
-  - job_name: tasks
+  - job_name: swarm-tasks
     dockerswarm_sd_configs:
       - host: tcp://172.17.0.1:2375
         role: tasks
@@ -50,6 +44,38 @@ scrape_configs:
         target_label: __address__
         regex: (.+);(.+)
         replacement: $1:$2
+      # capture the service itself as the "job" (override this single 'tasks' job)
+      - source_labels:
+          - __meta_dockerswarm_service_name
+        target_label: job
+        regex: .+_(.+)
+        replacement: $1
+      # capture the hostname of the running node
+      - source_labels:
+          - __meta_dockerswarm_node_hostname
+        target_label: node
+        replacement: $1
+
+  # monitor cable modem
+  # configured separately to override interval/timeout
+  - job_name: swarm-tasks_mb8600-exporter
+    scrape_interval: 1m
+    scrape_timeout: 30s
+    dockerswarm_sd_configs:
+      - host: tcp://172.17.0.01:2375
+        role: tasks
+        port: 3000
+    relabel_configs:
+      # only keep containers that should be running
+      - source_labels:
+          - __meta_dockerswarm_task_desired_state
+        regex: running
+        action: keep
+      # only scrape enabled services (opt-in)
+      - source_labels:
+          - __meta_dockerswarm_service_name
+        regex: lab_mb8600-exporter
+        action: keep
       # capture the service itself as the "job" (override this single 'tasks' job)
       - source_labels:
           - __meta_dockerswarm_service_name
