add traefik tls config for auto cert renewal

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -6,9 +6,17 @@ services:
     image: traefik:v2.4.13
     ports:
       - 80:80
+      - 443:443
       - 8080:8080
+    environment:
+      - NAMECHEAP_API_KEY_FILE=/run/secrets/namecheap-api-key
+      - NAMECHEAP_API_USER_FILE=/run/secrets/namecheap-api-user
+    secrets:
+      - namecheap-api-key
+      - namecheap-api-user
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./acme.json:/acme.json
     command:
       - --log.level=DEBUG
       - --api.insecure=true
@@ -16,8 +24,14 @@ services:
       - --providers.docker.swarmMode=true
       - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
+      - --entrypoints.web-secure.address=:443
       - --metrics=true
       - --metrics.prometheus=true
+      - --certificatesResolvers.primary.acme.email=dev@omglolwtfbbq.com
+      - --certificatesResolvers.primary.acme.storage=acme.json
+      - --certificatesResolvers.primary.acme.dnsChallenge=true
+      - --certificatesResolvers.primary.acme.dnsChallenge.provider=namecheap
+      - --certificatesResolvers.primary.acme.dnsChallenge.delayBeforeCheck=0
     deploy:
       placement:
         constraints:
@@ -25,3 +39,11 @@ services:
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=8080
+        - traefik.http.routers.api.tls.domains[0].main=lab.omglolwtfbbq.com
+        - traefik.http.routers.api.tls.domains[0].sans=*.lab.omglolwtfbbq.com
+
+secrets:
+  namecheap-api-key:
+    file: ./.secret.namecheap-api-key
+  namecheap-api-user:
+    file: ./.secret.namecheap-api-user
