--- a/whoami/docker-compose.yml
+++ b/whoami/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     deploy:
       labels:
         - traefik.enable=true
-        - traefik.http.services.whoami.loadbalancer.server.port=80
         - traefik.http.routers.whoami.rule=Host(`whoami.lab.omglolwtfbbq.com`)
-        - traefik.http.routers.whoami.entrypoints=web
+        - traefik.http.routers.whoami.entrypoints=web-secure
+        - traefik.http.routers.whoami.tls.certResolver=primary
+        - traefik.http.services.whoami.loadbalancer.server.port=80
