--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -20,6 +20,7 @@ services:
         - traefik.http.routers.prometheus.rule=Host(`prometheus.lab.omglolwtfbbq.com`)
         - traefik.http.routers.prometheus.entrypoints=web-secure
         - traefik.http.routers.prometheus.tls.certResolver=primary
+        - traefik.http.routers.prometheus.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.prometheus.loadbalancer.server.port=9090
 
 volumes:
