--- a/visualizer/docker-compose.yml
+++ b/visualizer/docker-compose.yml
@@ -15,4 +15,5 @@ services:
         - traefik.http.routers.visualizer.rule=Host(`visualizer.lab.omglolwtfbbq.com`)
         - traefik.http.routers.visualizer.entrypoints=web-secure
         - traefik.http.routers.visualizer.tls.certResolver=primary
+        - traefik.http.routers.visualizer.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.visualizer.loadbalancer.server.port=8080
