--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -17,7 +17,9 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.pihole.rule=Host(`pihole.lab.omglolwtfbbq.com`)
-      - traefik.http.routers.pihole.entrypoints=web
+      - traefik.http.routers.pihole.entrypoints=web-secure
+      - traefik.http.routers.pihole.tls.certResolver=primary
+      - traefik.http.routers.pihole.tls.domains[0].main=*.lab.omglolwtfbbq.com
       - traefik.http.services.pihole.loadbalancer.server.port=80
 
 volumes:
