--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -16,13 +16,14 @@ services:
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
     #cap_add:
     #  - NET_ADMIN
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.pihole.rule=Host(`pihole.lab.omglolwtfbbq.com`)
-      - traefik.http.routers.pihole.entrypoints=web-secure
-      - traefik.http.routers.pihole.tls.certResolver=primary
-      - traefik.http.routers.pihole.tls.domains[0].main=*.lab.omglolwtfbbq.com
-      - traefik.http.services.pihole.loadbalancer.server.port=80
+    deploy:
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.pihole.rule=Host(`pihole.lab.omglolwtfbbq.com`)
+        - traefik.http.routers.pihole.entrypoints=web-secure
+        - traefik.http.routers.pihole.tls.certResolver=primary
+        - traefik.http.routers.pihole.tls.domains[0].main=*.lab.omglolwtfbbq.com
+        - traefik.http.services.pihole.loadbalancer.server.port=80
 
 secrets:
   pihole-web-password:
