--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -24,6 +24,16 @@ services:
         - traefik.http.routers.pihole.tls.certResolver=primary
         - traefik.http.routers.pihole.tls.domains[0].main=*.lab.omglolwtfbbq.com
         - traefik.http.services.pihole.loadbalancer.server.port=80
+        - traefik.tcp.routers.pihole-tcp.rule=HostSNI(`*`)
+        - traefik.tcp.routers.pihole-tcp.entrypoints=dns-tcp
+        - traefik.tcp.routers.pihole-tcp.service=pihole-tcp
+        - traefik.tcp.routers.pihole-tcp.tls.certResolver=primary
+        - traefik.tcp.routers.pihole-tcp.tls.domains[0].main=*.lab.omglolwtfbbq.com
+        - traefik.tcp.services.pihole-tcp.loadbalancer.server.port=53
+        - traefik.udp.routers.pihole-udp.entrypoints=dns-udp
+        - traefik.udp.routers.pihole-udp.service=pihole-udp
+        - traefik.udp.services.pihole-udp.loadbalancer.server.port=53
+#        - traefik.udp.services.pihole-udp.passHostHeader=true
 
 secrets:
   pihole-web-password:
