--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   traefik:
     image: traefik:v2.4.13
     ports:
+      - 53:53/tcp
+      - 53:53/udp
       - 80:80
       - 443:443
       - 8080:8080
