failed attempts at udp passthru
Traefik doesn't support this. Not sure whether its even a thing for
UDP, but traefik's dashboard has the placeholder. Suspicion is that
this is why PiHole shows only traefik container as the client.

--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -33,7 +33,8 @@ services:
         - traefik.udp.routers.pihole-udp.entrypoints=dns-udp
         - traefik.udp.routers.pihole-udp.service=pihole-udp
         - traefik.udp.services.pihole-udp.loadbalancer.server.port=53
-#        - traefik.udp.services.pihole-udp.passHostHeader=true
+#        - traefik.udp.services.pihole-udp.loadbalancer.passhostheader=true
+#        - traefik.udp.services.pihole-udp.passhostheader=true
 
   pihole-exporter:
     image: ekofr/pihole-exporter:v0.0.11
