add static configs for hardware appliances
This keeps these things behind the same TLS cert as all containerized services, and resolves browser warnings from their self-signed certs.

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -8,6 +8,9 @@ providers:
   docker:
     swarmMode: true
     exposedByDefault: false
+  file:
+    directory: /etc/traefik/config
+    watch: true
 
 metrics:
   prometheus: {}
