--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - namecheap-api-user
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml
+      - ./route-config:/etc/traefik/config
       - ./acme.json:/acme.json
       - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
