--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -17,13 +17,10 @@ services:
       - namecheap-api-key
       - namecheap-api-user
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./traefik.yml:/etc/traefik/traefik.yml
       - ./route-config:/etc/traefik/config
-    configs:
-      - source: traefik-yml
-        target: /etc/traefik/traefik.yml
-      - source: acme-json
-        target: /acme.json
+      - ./acme.json:/acme.json
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
       placement:
         constraints:
@@ -31,12 +28,6 @@ services:
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=8080
-
-configs:
-  traefik-yml:
-    file: ./traefik.yml
-  acme-json:
-    file: ./acme.json
 
 secrets:
   namecheap-api-key:
