restore node placement constraint for prometheus
lab_prometheus.1.t1g6f7illws5@lab-pi-02    | level=error ts=2021-08-24T23:55:06.967Z caller=refresh.go:98 component="discovery manager scrape" discovery=dockerswarm msg="Unable to refresh target groups" err="error while listing swarm services: Error response from daemon: This node is not a swarm manager. Worker nodes can't be used to view or modify cluster state. Please run this command on a manager node or promote the current node to a manager."

--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - source: prometheus-yml
         target: /etc/prometheus/prometheus.yml
     deploy:
+      placement:
+        constraints:
+          - node.role == manager
       labels:
         - prometheus.swarm.enable=true
         - prometheus.swarm.port=9090
