--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   pihole:
-    image: pihole/pihole:v5.8.1
+    image: pihole/pihole:2021.09
     environment:
       - TZ=America/New_York
       - WEBPASSWORD_FILE=/run/secrets/pihole-web-password
